Fix push down failure for min/max on derived field (#4572)
(cherry picked from commit 0257aa5d51f044f3287bbaffc83aa72f8960c57c)
Signed-off-by: Heng Qian <qianheng@amazon.com>